@@ -9,11 +9,6 @@ import com.comphenix.protocol.events.PacketEvent;
 import com.comphenix.protocol.reflect.StructureModifier;
 import com.comphenix.protocol.wrappers.BlockPosition;
 import com.comphenix.protocol.wrappers.EnumWrappers;
-import fr.euphyllia.energie.Energie;
-import fr.euphyllia.energie.model.Scheduler;
-import fr.euphyllia.energie.model.SchedulerTaskInter;
-import fr.euphyllia.energie.model.SchedulerType;
-import io.papermc.paper.threadedregions.scheduler.ScheduledTask;
 import io.th0rgal.oraxen.OraxenPlugin;
 import io.th0rgal.oraxen.api.OraxenBlocks;
 import io.th0rgal.oraxen.api.OraxenFurniture;
@@ -44,14 +39,11 @@ import org.bukkit.event.player.PlayerInteractEvent;
 import org.bukkit.inventory.EquipmentSlot;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.potion.PotionEffect;
-import org.bukkit.potion.PotionEffectType;
 import org.bukkit.scheduler.BukkitScheduler;
 import org.bukkit.scheduler.BukkitTask;
 
 import java.util.*;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.concurrent.atomic.AtomicInteger;
+import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Consumer;
 
@@ -60,8 +52,8 @@ import static io.th0rgal.oraxen.mechanics.provided.gameplay.block.BlockMechanicF
 public class BreakerSystem {
 
     public static final List<HardnessModifier> MODIFIERS = new ArrayList<>();
-    private final Map<Location, Scheduler> breakerPerLocation = new HashMap<>();
-    private final Map<Location, SchedulerTaskInter> breakerPlaySound = new HashMap<>();
+    private final Map<Location, fr.euphyllia.energie.model.Scheduler> breakerPerLocation = new HashMap<>();
+    private final Map<Location, fr.euphyllia.energie.model.SchedulerTaskInter> breakerPlaySound = new HashMap<>();
     private final PacketAdapter listener = new PacketAdapter(OraxenPlugin.get(),
             ListenerPriority.LOW, PacketType.Play.Client.BLOCK_DIG) {
         @Override
@@ -77,14 +69,15 @@ public class BreakerSystem {
                     .getEnumModifier(EnumWrappers.PlayerDigType.class, 2);
             EnumWrappers.PlayerDigType type;
             try {
-                type = data.getValues().get(0);
+                type = data.getValues().getFirst();
             } catch (IllegalArgumentException exception) {
                 type = EnumWrappers.PlayerDigType.SWAP_HELD_ITEMS;
             }
 
-            final BlockPosition pos = dataTemp.getValues().get(0);
+            final BlockPosition pos = dataTemp.getValues().getFirst();
             final World world = player.getWorld();
             final Block block = world.getBlockAt(pos.getX(), pos.getY(), pos.getZ());
+            final Location location = block.getLocation();
             final BlockFace blockFace = dataDirection.size() > 0 ?
                     BlockFace.valueOf(dataDirection.read(0).name()) :
                     BlockFace.UP;
@@ -109,7 +102,6 @@ public class BreakerSystem {
 
             event.setCancelled(true);
 
-            final Location location = block.getLocation();
             if (type == EnumWrappers.PlayerDigType.START_DESTROY_BLOCK) {
                 // Get these when block is started being broken to minimize checks & allow for proper damage checks later
                 final Drop drop;
@@ -121,95 +113,103 @@ public class BreakerSystem {
                     drop = stringMechanic.getDrop() != null ? stringMechanic.getDrop() : Drop.emptyDrop();
                 else drop = null;
 
-                // Methods for sending multi-barrier block-breaks
-                final List<Location> furnitureBarrierLocations = furnitureBarrierLocations(furnitureMechanic, block);
-
-                OraxenPlugin.getScheduler().runTask(SchedulerType.SYNC, player, playerTask ->
-                            player.addPotionEffect(new PotionEffect(PotionUtils.getEffectType("mining_fatigue"),
-                                    (int) (period * 11),
-                                    Integer.MAX_VALUE,
-                                    false, false, false)), null);
+                OraxenPlugin.getScheduler().runTask(fr.euphyllia.energie.model.SchedulerType.SYNC, player, playerTask ->
+                        player.addPotionEffect(new PotionEffect(PotionUtils.getEffectType("mining_fatigue"),
+                                (int) (period * 11),
+                                Integer.MAX_VALUE,
+                                false, false, false)), null);
 
                 if (breakerPerLocation.containsKey(location))
                     breakerPerLocation.get(location).cancelAllTask();
 
-                final Scheduler scheduler = OraxenPlugin.getScheduler();
+                final fr.euphyllia.energie.model.Scheduler scheduler = OraxenPlugin.getScheduler();
                 // Cancellation state is being ignored.
                 // However still needs to be called for plugin support.
                 final PlayerInteractEvent playerInteractEvent =
                         new PlayerInteractEvent(player, Action.LEFT_CLICK_BLOCK, player.getInventory().getItemInMainHand(), block, blockFace, EquipmentSlot.HAND);
-                scheduler.runTask(SchedulerType.SYNC, player, task -> Bukkit.getPluginManager().callEvent(playerInteractEvent), null);
-
-                // If the relevant damage event is cancelled, return
-                if (blockDamageEventCancelled(block, player)) return;
+                scheduler.runTask(fr.euphyllia.energie.model.SchedulerType.SYNC, player, task -> Bukkit.getPluginManager().callEvent(playerInteractEvent), null);
 
                 breakerPerLocation.put(location, scheduler);
+
+                // If the relevant damage event is cancelled, return
+                if (blockDamageEventCancelled(block, player)) {
+                    stopBlockBreaker(location);
+                    return;
+                }
+
+                // Methods for sending multi-barrier block-breaks
+                final List<Location> furnitureBarrierLocations = furnitureBarrierLocations(furnitureMechanic, block);
                 final HardnessModifier modifier = triggeredModifier;
-                startBlockHitSound(block);
-                AtomicInteger value = new AtomicInteger();
-                scheduler.runAtFixedRate(SchedulerType.SYNC, location, taskInter -> {
-                    if (taskInter == null) return;
-                    if (!breakerPerLocation.containsKey(location)) {
-                        taskInter.cancel();
-                        return;
-                    }
+                startBlockHitSound(location); java.util.concurrent.atomic.AtomicInteger value = new java.util.concurrent.atomic.AtomicInteger(0);
 
-                    if (item.getEnchantmentLevel(EnchantmentWrapper.EFFICIENCY) >= 5)
-                        value.set(10);
+                scheduler.runAtFixedRate(fr.euphyllia.energie.model.SchedulerType.SYNC, location, bukkitTask -> { if (bukkitTask == null) return;
+                    //int value = 0;
 
-                    for (final Entity entity : world.getNearbyEntities(location, 16, 16, 16)) {
-                        if (entity instanceof Player viewer) {
-                            if (furnitureMechanic != null) for (Location barrierLoc : furnitureBarrierLocations)
-                                sendBlockBreak(viewer, barrierLoc, value.get());
-                            else sendBlockBreak(viewer, location, value.get());
+                    //@Override
+                    //public void accept(final BukkitTask bukkitTask) {
+                        if (!breakerPerLocation.containsKey(location)) {
+                            bukkitTask.cancel();
+                            stopBlockHitSound(location);
+                            return;
                         }
-                    }
 
-                    if (value.getAndIncrement() < 10) return;
-                    if (EventUtils.callEvent(new BlockBreakEvent(block, player)) && ProtectionLib.canBreak(player, location)) {
-                        // Damage item with properties identified earlier
-                        ItemUtils.damageItem(player, drop, item);
-                        modifier.breakBlock(player, block, item);
-                    } else stopBlockHitSound(block);
+                        if (item.getEnchantmentLevel(EnchantmentWrapper.EFFICIENCY) >= 5)
+                            value.set(10);
 
-                    OraxenPlugin.getScheduler().runTask(SchedulerType.SYNC, player, task ->
-                            player.removePotionEffect(PotionUtils.getEffectType("mining_fatigue")), null);
-
-                    stopBlockBreaker(block);
-                    stopBlockHitSound(block);
-                    for (final Entity entity : world.getNearbyEntities(location, 16, 16, 16)) {
-                        if (entity instanceof Player viewer) {
-                            if (furnitureMechanic != null) for (Location barrierLoc : furnitureBarrierLocations)
-                                sendBlockBreak(viewer, barrierLoc, value.get());
-                            else sendBlockBreak(viewer, location, value.get());
+                        for (final Entity entity : world.getNearbyEntities(location, 16, 16, 16)) {
+                            if (entity instanceof Player viewer) {
+                                if (furnitureMechanic != null) for (Location barrierLoc : furnitureBarrierLocations)
+                                    sendBlockBreak(viewer, barrierLoc, value.get());
+                                else sendBlockBreak(viewer, location, value.get());
+                            }
                         }
-                    }
-                    taskInter.cancel();
+
+                        if (value.getAndIncrement() < 10) return;
+                        if (EventUtils.callEvent(new BlockBreakEvent(block, player)) && ProtectionLib.canBreak(player, location)) {
+                            // Damage item with properties identified earlier
+                            ItemUtils.damageItem(player, drop, item);
+                            modifier.breakBlock(player, block, item);
+                        } else stopBlockHitSound(location);
+
+                        OraxenPlugin.getScheduler().runTask(fr.euphyllia.energie.model.SchedulerType.SYNC, player, task ->
+                                player.removePotionEffect(PotionUtils.getEffectType("mining_fatigue")), null);
+
+                        stopBlockBreaker(location);
+                        stopBlockHitSound(location);
+                        for (final Entity entity : world.getNearbyEntities(location, 16, 16, 16)) {
+                            if (entity instanceof Player viewer) {
+                                if (furnitureMechanic != null) for (Location barrierLoc : furnitureBarrierLocations)
+                                    sendBlockBreak(viewer, barrierLoc, value.get());
+                                else sendBlockBreak(viewer, location, value.get());
+                            }
+                        }
+                        bukkitTask.cancel();
+                    //}
                 }, period, period);
             } else {
-                OraxenPlugin.getScheduler().runTask(SchedulerType.SYNC, player, (task) -> {
+                OraxenPlugin.getScheduler().runTask(fr.euphyllia.energie.model.SchedulerType.SYNC, player, playerTask -> {
                     player.removePotionEffect(PotionUtils.getEffectType("mining_fatigue"));
                     if (!ProtectionLib.canBreak(player, location))
-                        player.sendBlockChange(block.getLocation(), block.getBlockData());
+                        player.sendBlockChange(location, block.getBlockData());
 
-                    for (final Entity entity : world.getNearbyEntities(location, 16, 16, 16)) {
-                        OraxenPlugin.getScheduler().runTask(SchedulerType.SYNC, entity, nearEntitiesSchedule -> {
-                            if (entity instanceof Player viewer)
-                                sendBlockBreak(viewer, location, 10);
-                        }, null);
-                    }
-                    stopBlockBreaker(block);
-                    stopBlockHitSound(block);
+                    for (final Entity entity : world.getNearbyEntities(location, 16, 16, 16))
+                        if (entity instanceof Player viewer)
+                            sendBlockBreak(viewer, location, 10);
+                    stopBlockBreaker(location);
+                    stopBlockHitSound(location);
                 }, null);
             }
         }
     };
 
     private List<Location> furnitureBarrierLocations(FurnitureMechanic furnitureMechanic, Block block) {
+        fr.euphyllia.energie.model.Scheduler scheduler = breakerPerLocation.get(block.getLocation());
+        if (scheduler == null) return List.of(block.getLocation());
+
         AtomicReference<Entity> furnitureBaseEntity = new AtomicReference<>();
         Entity entity = furnitureMechanic != null ? furnitureMechanic.getBaseEntity(block) : null;
         if (entity != null) {
-            OraxenPlugin.getScheduler().runTask(SchedulerType.SYNC, entity, task -> furnitureBaseEntity.set(entity), null);
+            scheduler.runTask(fr.euphyllia.energie.model.SchedulerType.SYNC, entity, task -> furnitureBaseEntity.set(entity), null);
         }
         return furnitureMechanic != null && furnitureBaseEntity.get() != null
                 ? furnitureMechanic.getLocations(FurnitureMechanic.getFurnitureYaw(furnitureBaseEntity.get()),
@@ -218,52 +218,27 @@ public class BreakerSystem {
     }
 
     private boolean blockDamageEventCancelled(Block block, Player player) {
+        fr.euphyllia.energie.model.Scheduler scheduler = breakerPerLocation.get(block.getLocation());
+        if (scheduler == null) return false;
 
         switch (block.getType()) {
             case NOTE_BLOCK -> {
                 NoteBlockMechanic mechanic = OraxenBlocks.getNoteBlockMechanic(block);
                 if (mechanic == null) return true;
                 OraxenNoteBlockDamageEvent event = new OraxenNoteBlockDamageEvent(mechanic, block, player);
-                OraxenPlugin.getScheduler().runTask(SchedulerType.SYNC, taskInter -> Bukkit.getPluginManager().callEvent(event));
+                scheduler.runTask(fr.euphyllia.energie.model.SchedulerType.SYNC, player, (schedulerTaskInter) -> Bukkit.getPluginManager().callEvent(event), null);
                 return event.isCancelled();
             }
             case TRIPWIRE -> {
                 StringBlockMechanic mechanic = OraxenBlocks.getStringMechanic(block);
                 if (mechanic == null) return true;
                 OraxenStringBlockDamageEvent event = new OraxenStringBlockDamageEvent(mechanic, block, player);
-                OraxenPlugin.getScheduler().runTask(SchedulerType.SYNC, taskInter -> Bukkit.getPluginManager().callEvent(event));
+                scheduler.runTask(fr.euphyllia.energie.model.SchedulerType.SYNC, player, (schedulerTaskInter) -> Bukkit.getPluginManager().callEvent(event), null);
                 return event.isCancelled();
             }
             case BARRIER -> {
                 try {
-                    if (!Energie.isFolia()) {
-                        return Bukkit.getScheduler().callSyncMethod(OraxenPlugin.get(), () -> {
-                            FurnitureMechanic mechanic = OraxenFurniture.getFurnitureMechanic(block);
-                            if (mechanic == null) {
-                                return true;
-                            }
-                            Entity baseEntity = mechanic.getBaseEntity(block);
-                            if (baseEntity == null) {
-                                return true;
-                            }
-                            OraxenFurnitureDamageEvent event = new OraxenFurnitureDamageEvent(mechanic, baseEntity, player, block);
-                            Bukkit.getPluginManager().callEvent(event);
-                            return event.isCancelled();
-                        }).get();
-                    } else {
-                        FurnitureMechanic mechanic = OraxenFurniture.getFurnitureMechanic(block);
-                        if (mechanic == null) {
-                            return true;
-                        }
-                        Entity baseEntity = mechanic.getBaseEntity(block);
-                        if (baseEntity == null) {
-                            return true;
-                        }
-                        OraxenFurnitureDamageEvent event = new OraxenFurnitureDamageEvent(mechanic, baseEntity, player, block);
-                        Bukkit.getPluginManager().callEvent(event);
-                        return event.isCancelled();
-                    }
-
+                    return barrierDamageEventCancelled(block, player).get(2, TimeUnit.SECONDS);
                 } catch (Exception e) {
                     return false;
                 }
@@ -277,8 +252,26 @@ public class BreakerSystem {
         }
     }
 
+    private java.util.concurrent.CompletableFuture<Boolean> barrierDamageEventCancelled(Block block, Player player) {
+        java.util.concurrent.CompletableFuture<Boolean> future = new java.util.concurrent.CompletableFuture<>();
+        Bukkit.getRegionScheduler().execute(OraxenPlugin.get(), block.getLocation(), () -> {
+            FurnitureMechanic mechanic = OraxenFurniture.getFurnitureMechanic(block);
+            if (mechanic == null) {
+                future.complete(true); return;
+            }
+            Entity baseEntity = mechanic.getBaseEntity(block);
+            if (baseEntity == null) {
+                future.complete(true); return;
+            }
+            OraxenFurnitureDamageEvent event = new OraxenFurnitureDamageEvent(mechanic, baseEntity, player, block);
+            Bukkit.getPluginManager().callEvent(event);
+            future.complete(event.isCancelled());
+        });
+
+        return future;
+    }
+
     private void sendBlockBreak(final Player player, final Location location, final int stage) {
-        Block block = location.getBlock();
         final PacketContainer packet = ProtocolLibrary.getProtocolManager().createPacket(PacketType.Play.Server.BLOCK_BREAK_ANIMATION);
         packet.getIntegers().write(0, location.hashCode()).write(1, stage);
         packet.getBlockPositionModifier().write(0, new BlockPosition(location.toVector()));
@@ -286,27 +279,31 @@ public class BreakerSystem {
         ProtocolLibrary.getProtocolManager().sendServerPacket(player, packet);
     }
 
-    private void stopBlockBreaker(Block block) {
-        if (breakerPerLocation.containsKey(block.getLocation())) {
-            breakerPerLocation.get(block.getLocation()).cancelAllTask();
-            breakerPerLocation.remove(block.getLocation());
+    private void stopBlockBreaker(Location location) {
+        if (breakerPerLocation.containsKey(location)) {
+            breakerPerLocation.get(location).cancelAllTask();
+            breakerPerLocation.remove(location);
         }
     }
 
-    private void startBlockHitSound(Block block) {
-        BlockSounds blockSounds = getBlockSounds(block);
-        if (blockSounds == null || !blockSounds.hasHitSound()) return;
-        Location blockLocation = block.getLocation();
-        breakerPlaySound.put(blockLocation, OraxenPlugin.getScheduler().runAtFixedRate(SchedulerType.SYNC, blockLocation, taskInter -> {
-            BlockHelpers.playCustomBlockSound(blockLocation, getSound(block), blockSounds.getHitVolume(), blockSounds.getHitPitch());
-            }, 0L, 4L));
+    private void startBlockHitSound(Location location) {
+        fr.euphyllia.energie.model.Scheduler scheduler = breakerPerLocation.get(location);
+        BlockSounds blockSounds = getBlockSounds(location.getBlock());
+
+        if (scheduler == null || blockSounds == null || !blockSounds.hasHitSound()) {
+            stopBlockHitSound(location);
+            return;
+        }
+
+        breakerPlaySound.put(location, scheduler.runAtFixedRate(fr.euphyllia.energie.model.SchedulerType.SYNC, location,
+                (schedulerTaskInter) -> BlockHelpers.playCustomBlockSound(location, getHitSound(location.getBlock()), blockSounds.getHitVolume(), blockSounds.getHitPitch())
+                , 1L, 4L));
     }
 
-    private void stopBlockHitSound(Block block) {
-        if (breakerPlaySound.containsKey(block.getLocation())) {
-            breakerPlaySound.get(block.getLocation()).cancel();
-            breakerPlaySound.remove(block.getLocation());
-        }
+    private void stopBlockHitSound(Location location) {
+        fr.euphyllia.energie.model.SchedulerTaskInter value = breakerPlaySound.get(location);
+        if (value != null) value.cancel();
+        breakerPlaySound.remove(location);
     }
 
     public void registerListener() {
@@ -347,7 +344,7 @@ public class BreakerSystem {
         }
     }
 
-    private String getSound(Block block) {
+    private String getHitSound(Block block) {
         ConfigurationSection soundSection = OraxenPlugin.get().getConfigsManager().getMechanics().getConfigurationSection("custom_block_sounds");
         if (soundSection == null) return null;
         BlockSounds sounds = getBlockSounds(block);
